--- a/index.html
+++ b/index.html
@@ -102,18 +102,12 @@
                     <h2>About Me</h2>
                 </header>
 
-                <!--
-에듀케이션, 라이센스(정보처리기사), 오브젝티브(목표를 위해 준비하고 있는 것)
-~~의 끝을 보고싶은 한예솔입니다.
-QnA 두개정도
-ex. 지각이 뭐죠? 12년 개근인생
--->
                 <div class="row">
                     <div class="col-3 col-12-mobile">
                         <image src="./images/me.jpg" style="width: 100%;margin-bottom: 0;"></image>
 
                         <p class="gowun" style="text-align: center; font-size:1.1em;background-color: beige;">한 예 솔</p>
-                        <p class="nanum" style="font-size: 1.5em;">#팀워크 #창의적 <br>#책임감 #센스</p>
+                        <p class="nanum" style="font-size: 1.5em;">#팀워크 #창의적 <br>#책임감</p>
                     </div>
                     <div class="col-9 col-12-mobile">
 
@@ -121,36 +115,39 @@ ex. 지각이 뭐죠? 12년 개근인생
                             <summary>Education</summary>
 
                             <div class="tpt">
-                                <div class="about-edu">
-                                    <li>순천향대학교 졸업예정 (2017.03 - 현재)</li>
-                                    <p> -&nbsp; &nbsp; &nbsp; 사물인터넷학과 본전공
-                                        </br> -&nbsp; &nbsp; &nbsp; 스마트케어 복수전공
-                                        </br>-&nbsp; &nbsp; &nbsp; 4년 전액 장학생: 성적우수 및 프라임 융합인재 장학금
-                                        </br>-&nbsp; &nbsp; &nbsp; Network 연구실 연구학생 활동 (2018.03 - 2020.08)
-                                        </br>-&nbsp; &nbsp; &nbsp; Dream Mentor 학과 홍보 활동 (2019.03 - 2020.08)
+                                <div class="about-edu" style="margin-top: 0;">
+                                    <p>
+                                        <li>순천향대학교 졸업예정 (2017.03 - 현재)</li>
+                                        &nbsp; &nbsp; -&nbsp; &nbsp; &nbsp; 사물인터넷학과 본전공
+                                        </br> &nbsp; &nbsp; -&nbsp; &nbsp; &nbsp; 스마트케어 복수전공
+                                        </br> &nbsp; &nbsp; -&nbsp; &nbsp; &nbsp; 4년 전액 장학생: 성적우수 및 PRIME 융합인재 장학금
+                                        </br> &nbsp; &nbsp; -&nbsp; &nbsp; &nbsp; Network 연구실 연구학생 활동 (2018.03 - 2020.08)
+                                        </br> &nbsp; &nbsp; -&nbsp; &nbsp; &nbsp; Dream Mentor 학과 홍보 활동 (2019.03 - 2020.08)
+                                        </br>
+                                        </br>
+                                        <li>초당고등학교 졸업 (2014.03 - 2017.02)</li>
+                                        &nbsp; &nbsp; -&nbsp; &nbsp; &nbsp; 과학중점 과정
                                     </p>
-                                </div>
-
-                                <div class="about-edu">
-                                    <li>초당고등학교 졸업 (2014.03 - 2017.02)</li>
-                                    <p> -&nbsp; &nbsp; &nbsp; 과학중점 과정</p>
                                 </div>
                             </div>
                         </details>
 
-                        <details name='edu' onclick='onlyone(this)'>
-                            <summary style="font-size: 0.8em;">단기 특강</summary>
+                        <details name='edu' onclick='onlyone(this)' open>
+                            <summary style=" font-size: 0.8em;">단기 특강</summary>
 
                             <div class="tpt">
                                 <div class="about-edu" style="margin-top: 0;">
                                     <li>AWS Technical Essentials 클라우드 교육 (2021.01.18)</li>
+                                    <li>3D 프린팅 및 CAD 프로그램의 이해와 실습 (2020.06.09)</li>
+                                    <li>국제 규격 품질 경영의 이해 및 실습 (2019.11.07)</li>
+                                    <li>국제 규격 품질 경영의 이해 및 창업 도구로서 ISO 인증 상품에 대한 이해 (2019.10.31)</li>
                                     <li>블록체인을 통한 Business Insight 정보기술전략 수료 (2019.08.19 - 08.20)</li>
                                     <li>글로벌 융합 교육 - 일본 단기 워크숍 (2019.01.17 - 01.20)</li>
                                 </div>
                             </div>
                         </details>
 
-                        <details name='edu' onclick='onlyone(this)'>
+                        <details name='edu' onclick='onlyone(this)' open>
                             <summary>자격증</summary>
 
                             <div class="tpt">
@@ -161,14 +158,6 @@ ex. 지각이 뭐죠? 12년 개근인생
                         </details>
                     </div>
                 </div>
-
-                <!-- <br/>
-                <p class="gowun" style="margin-bottom: 0;">Q. 문서는 쓸 줄 아나요?</p>
-                <p class="gowun">A. PPT, Excel, Word, 한글 모두 중간 수준 이상으로 쓸 줄 압니다. 다른 사람의 문서를 검토해주고, 학생회 임원으로서 공적인 문서를 게시하다 보니 저절로 늘게 되었습니다.</p>
-                <p class="gowun" style="margin-bottom: 0;">Q. 창의적이라는 걸 어떻게 알죠?</p>
-                <p class="gowun">A. 남보다 더 많이 도전하고, 정보를 찾고, 생각한다면 누구나 창의적일 수 있다고 생각합니다. 저는 과제에 성실했고, 없던 가치를 찾았더니 창의적인 아이템이 되었습니다. 제가 참여한 팀의 10개 중 8개는 저의 아이디어로 시작된 아이템입니다.</p>
-                <p class="gowun" style="margin-bottom: 0;">Q. </p>
-                <p class="gowun">A. </p> -->
             </div>
         </section>
 
@@ -256,7 +245,7 @@ ex. 지각이 뭐죠? 12년 개근인생
                             </p>
                             <p>- 사용 기술: Dothome Server, navicat DB, Arduino</p>
                             <p>- 사용 언어: C++(Arduino), Java, WEB(HTML5+CSS3+JS)</p>
-                            <p style="font-size:0.8em;">#2019-2020 #팀Project #디바이스 #Lab_to_Market대회_우수상</p>
+                            <p style="font-size:0.8em;">#2019-2020 #팀Project #디바이스 #Pitch&Catch대회_2019_최우수상</p>
                         </header>
                     </article>
                 </div>
@@ -271,7 +260,7 @@ ex. 지각이 뭐죠? 12년 개근인생
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 타겟 집중: 영유아 사고 방지를 위한 목적으로 영유아~저학년 학생의
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 케어 이후 성장에 따른 누적 데이터 확보로 성인까지 서비스 확대
                             </p>
-                            <p style="font-size:0.8em;">#2019 #팀Project #아이디어 #Lab_to_Market_최우수상
+                            <p style="font-size:0.8em;">#2019 #팀Project #아이디어 #Pitch&Catch대회_2020_최우수상
                                 </br><a href="files/BIO대회_예선_참가확인증.jpg">#제6회_BIO창업아이디어경진대회_예선작</a></p>
                         </header>
                     </article>
@@ -284,7 +273,7 @@ ex. 지각이 뭐죠? 12년 개근인생
                             <h3>스마트 옷장</h3>
                             <p>- 내용: 옷장과 스타일러를 조합한 효율적인 옷 관리 시스템
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 옷 자동 이동: 옷장과 스타일러의 자동이동을 통한 옷 청결화
-                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 스타일 추천: 기계학습(AI)을 통한 옷 추천 기능
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 스타일 추천: 인공지능(AI)을 통한 옷 추천 기능
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 옷 목록 관리: 쇼핑할 때 비슷한 옷 소비 줄임, 어울리는 옷 찾기
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 4. 소셜: 친구와 목록 공유, 커플룩 매칭 기능
                             </p>
@@ -303,6 +292,25 @@ ex. 지각이 뭐죠? 12년 개근인생
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 헌혈증서 기부 플랫폼 (양도)
                             </p>
                             <p style="font-size:0.8em;">#2020 #팀Project #캡스톤디자인대회 #블록체인 #아이디어</p>
+                        </header>
+                    </article>
+                </div>
+                </br>
+                <div class="wrapper">
+                    <article class="item">
+                        <a href="https://github.com/yesol-Han/IDEA/blob/main/AI%EA%B8%B0%EB%B0%98%20%EC%A7%80%EC%97%AD%EB%B3%84%20%EB%9F%AC%EB%8B%9D%20%EB%A3%A8%ED%8A%B8%20%EC%B6%94%EC%B2%9C%20%EC%8B%9C%EC%8A%A4%ED%85%9C/24%EC%A1%B0_AI%20%EA%B8%B0%EB%B0%98%20%EC%A7%80%EC%97%AD%EB%B3%84%20%EB%9F%AC%EB%8B%9D%20%EB%A3%A8%ED%8A%B8%20%EC%B6%94%EC%B2%9C%20%EC%8B%9C%EC%8A%A4%ED%85%9C.pdf"
+                            class="image fit"><img src="images/러닝루트.png" alt="" /></a>
+                        <header>
+                            <h3>AI 기반 지역별 러닝 루트 추천 시스템</h3>
+                            <p>- 내용: 사용자의 신체정보와 거주 지역, 감정 등을 고려한 러닝 경로 제공
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 1. 사용자 신체 정보 기반 운동량 추천
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;- 웨어러블 기기와 사용자 평가 기반 정성/정량적 데이터
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 키워드별 루트 추천
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;- 공공정보 데이터의 지형/공원 위치 정보 등 기반
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3. 상점 추천 및 경유 기능
+                                </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - 운동량에 따른 식단 솔루션 제시
+                            </p>
+                            <p style="font-size:0.8em;">#2021 #팀Project #캡스톤디자인_및_해커톤_아이디어_경진대회_장려상 #인공지능_AI #아이디어</p>
                         </header>
                     </article>
                 </div>
@@ -329,7 +337,7 @@ ex. 지각이 뭐죠? 12년 개근인생
                                 </br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2. 환경측정: CO2, 온도, 습도, 미세먼지 농도를 측정하여 표시
                             </p>
                             <p>- 사용 기술: Arduino(GP2Y1010AU0F, KY0037, MQ135, DHT11, LCD, LED)</p>
-                            <p style="font-size:0.8em;">#2018 #팀Project #Lab_to_Market대회 #일본워크숍_대표팀_선발</p>
+                            <p style="font-size:0.8em;">#2018 #팀Project #융합전공동아리_성과발표회 #일본워크숍_대표팀_선발</p>
                         </header>
                     </article>
                 </div>
@@ -506,19 +514,6 @@ ex. 지각이 뭐죠? 12년 개근인생
                 </div>
             </div>
         </section>
-
-        <!-- 7 Potentiality -->
-        <!-- <section id="potentiality"class="three">
-            <div class="container">
-                <header>
-                    <h2>Potentiality</h2>
-                </header>
-
-                회사의 인재상 - 창의적 인재, QnA형식
-                <br> 나의 이런 스킬은 ㅇㅇ회사에 도움이 될테니 초이스 해주세요
-                <br>
-            </div>
-        </section> -->
 
         <!-- 8 Contact -->
         <section id="contact" class="four">
