--- a/index.html
+++ b/index.html
@@ -426,14 +426,15 @@
                         </article>
 
                         <article class="item2" style="box-shadow: none;">
-                            <h3 class="progressbar-title">Machine Learning</h3>
+                            <h3 class="progressbar-title">Artificial intelligence</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 30%; background: #74a9d4;">
+                                <div class="progress-bar" style="width: 40%; background: #74a9d4;">
                                     <span class="progress-icon fa fa-check" style="border-color:#74a9d4; color:#74a9d4;"></span>
-                                    <div class="progress-value">30%</div>
+                                    <div class="progress-value">40%</div>
                                 </div>
                             </div>
                             <p>-'스마트폰을 통한 행동인식', '부동산 집값 예측' 등 프로젝트
+                                </br>- 'AI기반 지역별 러닝 루트 추천' 아이디어
                                 </br>- 아나콘다(Jupyter Notebook) 툴로 실습
                             </p>
                         </article>
