--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </details>
 
                         <details name='edu' onclick='onlyone(this)' open>
-                            <summary style=" font-size: 0.8em;">단기 특강</summary>
+                            <summary style=" font-size: 0.8em;">교육 이수</summary>
 
                             <div class="tpt">
                                 <div class="about-edu" style="margin-top: 0;">
@@ -142,7 +142,7 @@
                                     <li>국제 규격 품질 경영의 이해 및 실습 (2019.11.07)</li>
                                     <li>국제 규격 품질 경영의 이해 및 창업 도구로서 ISO 인증 상품에 대한 이해 (2019.10.31)</li>
                                     <li>블록체인을 통한 Business Insight 정보기술전략 수료 (2019.08.19 - 08.20)</li>
-                                    <li>글로벌 융합 교육 - 일본 단기 워크숍 (2019.01.17 - 01.20)</li>
+                                    <li>글로벌 융합 교육 - 일본 워크숍 (2019.01.17 - 01.20)</li>
                                 </div>
                             </div>
                         </details>
